# Realtime-RT-Filters

./: .gitignore  .gitmodules  Wochenübersicht_-_Räumliche_und_zeitliche_Filter_für_Echtzeit-Raytracing.docx  readme.md
docs/protocols/: protokoll-19-03-2021.odt  realisierungsgruppe-protokoll-02-04-2021.odt
licenses/: GLM - License Notes.md
source/realtimertfilters/: CMakeLists.txt  CMakeSettings.json
source/realtimertfilters/base/: DataPath.h.in  VulkanTools.cpp  VulkanTools.h  VulkanglTFModel.cpp  VulkanglTFModel.h  vulkanexamplebase.cpp  vulkanexamplebase.h
source/realtimertfilters/realtimertfilters-app/: CMakeLists.txt  project_defines.hpp  project_defines.hpp.in  realtimertfilters-app.cpp  realtimertfilters-app.h
source/realtimertfilters/realtimertfilters-app/data/models/: cornellBox.gltf  test.gltf
source/realtimertfilters/realtimertfilters-app/data/models/san_miguel/: ReadMe.txt
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/: CMakeLists.txt  compile_all_shaders.bat  compile_all_shaders.bat.in  postprocess_passthrough.vert  ubo_definitions.glsl
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/bmfr/: bmfrMain.comp  bmfrMain.comp.dontcompile  bmfrPostProcess.frag  bmfrPreprocess.frag
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/deferred/: compile.bat  deferred.frag  mrt.frag  mrt.frag.spv
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/filter/: filtercommon.glsl  frag.spv  postprocess_atrous.frag  postprocess_atrous_membarrier.frag  postprocess_depthTest.frag  postprocess_gauss.frag  postprocess_gauss.frag.spv  postprocess_tempAccu.frag
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/gui/: compile.bat  gui.frag  gui.frag.spv
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/pathTracerShader/: binding.glsl  closesthit.rchit  closesthit.rchit.spv  compile.py  gltf.glsl  miss.rmiss  miss.rmiss.spv  pushconstant.glsl  raycommon.glsl  raygen.rgen  raygen.rgen.spv  sampling.glsl  shadow.rmiss
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/prepass/: rasterprepass.frag  rasterprepass.frag.spv  rasterprepass.vert  rasterprepass.vert.spv
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/raytracingshadows/: miss.rmiss.spv
source/realtimertfilters/realtimertfilters-app/data/shaders/glsl/svgf/: svgf_accumulation.frag  svgf_atrous.frag
source/realtimertfilters/realtimertfilters-app/headers/: AttachmentBinding.hpp  Attachment_Manager.hpp  BMFR.hpp  ManagedUBO.hpp  PathTracerManager.hpp  RTFilterDemo.hpp  RayTracingCommon.hpp  RaytracingManager.hpp  Renderpass.hpp  Renderpass_Filter.hpp  Renderpass_Gbuffer.hpp  Renderpass_Gui.hpp  Renderpass_PostProcess.hpp  SpatioTemporalAccumulation.hpp  SpirvCompiler.hpp  TextureBinding.hpp  VulkanglTFModel.h  disable_warnings.h
source/realtimertfilters/realtimertfilters-app/headers/renderpasses/: Renderpass.hpp  RenderpassManager.hpp  Renderpass_BMFRCompute.hpp  Renderpass_Filter.hpp  Renderpass_Gbuffer.hpp  Renderpass_Gui.hpp  Renderpass_PathTracer.hpp  Renderpass_PostProcess.hpp
source/realtimertfilters/realtimertfilters-app/sources/: AttachmentBinding.cpp  Attachment_Manager.cpp  BMFR.cpp  PathTracerManager.cpp  PathTracerManager.cpp.dontcompile  RTFilterDemo.cpp  RaytracingManager.cpp  RaytracingManager.cpp.dontcompile  Renderpass.cpp  Renderpass_Filter.cpp  Renderpass_Gbuffer.cpp  Renderpass_Gui.cpp  Renderpass_PostProcess.cpp  SpatioTemporalAccumulation.cpp  TextureBinding.cpp  VulkanglTFModel.cpp
source/realtimertfilters/realtimertfilters-app/sources/renderpasses/: Renderpass.cpp  RenderpassManager.cpp  Renderpass_BMFRCompute.cpp  Renderpass_Filter.cpp  Renderpass_Gbuffer.cpp  Renderpass_Gui.cpp  Renderpass_PathTracer.cpp  Renderpass_PostProcess.cpp
